--- a/.github/workflows/speech2text.yml
+++ b/.github/workflows/speech2text.yml
@@ -7,7 +7,6 @@ on:
     branches: ["*"]
 
 env:
-  POSTGRES_VERSION: "17.2"
   ELIXIR_VERSION: "1.18.1-otp-27"
   OTP_VERSION: "27.2"
 
@@ -17,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       postgres:
-        image: postgres:${{ env.POSTGRES_VERSION }}
+        image: postgres:17.2
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
@@ -48,7 +47,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       postgres:
-        image: postgres:${{ env.POSTGRES_VERSION }}
+        image: postgres:17.2
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
