--- a/.github/workflows/speech2text.yml
+++ b/.github/workflows/speech2text.yml
@@ -12,7 +12,7 @@ env:
   SERVICE: "speech2text"
   GAR_LOCATION: "europe-west2"
   REGION: "europe-west2"
-  GCP_PROJECT_ID: ${{ secrets.PROJECT_ID }}
+  GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
 
 jobs:
   build:
@@ -132,15 +132,15 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |-
-          docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID}}/${{env.SERVICE}}:${{github.sha}}" ./
-          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID}}/${{env.SERVICE}}:${{github.sha}}"
+          docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID}}/${{env.SERVICE}}:${{github.sha}}" ./
+          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID}}/${{env.SERVICE}}:${{github.sha}}"
 
       - name: Deploy to Cloud Run
         uses: google-github-actions/deploy-cloudrun@v2
         with:
           service: ${{env.SERVICE}}
           region: ${{env.REGION}}
-          image: "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID}}/${{env.SERVICE}}:${{github.sha}}"
+          image: "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID}}/${{env.SERVICE}}:${{github.sha}}"
           env_vars: |
             SECRET_KEY_BASE=${{ secrets.SECRET_KEY_BASE }}
             DATABASE_URL=${{ secrets.DATABASE_URL }}
