--- a/.github/workflows/speech2text.yml
+++ b/.github/workflows/speech2text.yml
@@ -12,7 +12,8 @@ env:
   SERVICE: "speech2text"
   GAR_LOCATION: "europe-west2"
   REGION: "europe-west2"
-  GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  GCP_PROJECT_ID: "speech2text-446412"
+  # GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
 
 jobs:
   build:
