--- a/.github/workflows/speech2text.yml
+++ b/.github/workflows/speech2text.yml
@@ -123,6 +123,7 @@ jobs:
         with:
           workload_identity_provider: ${{ secrets.WIF_PROVIDER }}
           service_account: ${{ secrets.WIF_SERVICE_ACCOUNT }}
+          token_format: "access_token"
 
       - name: Setup Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
