--- a/.github/workflows/speech2text.yml
+++ b/.github/workflows/speech2text.yml
@@ -135,15 +135,20 @@ jobs:
           gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev
           gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin ${{ env.GAR_LOCATION }}-docker.pkg.dev
 
-      - name: Build and Push Docker Image
-        run: |-
-          docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID}}/${{env.SERVICE}}:${{github.sha}}" ./
-          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID}}/${{env.SERVICE}}:${{github.sha}}"
 
       - name: Debug Docker Image name
         run: |-
           IMAGE_NAME="${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
           echo "Building and pushing image: ${IMAGE_NAME}"
+
+      - name: Build and Push Docker Image
+        run: |-
+          IMAGE_NAME="${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
+          echo "::debug::Building and pushing image: ${IMAGE_NAME}"
+          # or use this format:
+          echo "Building and pushing image: ${IMAGE_NAME}" >&2
+          docker build -t "${IMAGE_NAME}" ./
+          docker push "${IMAGE_NAME}"
 
       - name: Deploy to Cloud Run
         uses: google-github-actions/deploy-cloudrun@v2
