--- a/.github/workflows/speech2text.yml
+++ b/.github/workflows/speech2text.yml
@@ -143,6 +143,9 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |-
+          # Verifying the repo exists
+          gcloud artifacts repositories list --location=${{ env.GAR_LOCATION }}
+
           IMAGE_NAME="${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
           echo "::debug::Building and pushing image: ${IMAGE_NAME}"
           # or use this format:
