--- a/.github/workflows/speech2text.yml
+++ b/.github/workflows/speech2text.yml
@@ -135,18 +135,12 @@ jobs:
           gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev
           gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin ${{ env.GAR_LOCATION }}-docker.pkg.dev
 
-
-      - name: Debug Docker Image name
-        run: |-
-          IMAGE_NAME="${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
-          echo "Building and pushing image: ${IMAGE_NAME}"
-
       - name: Build and Push Docker Image
         run: |-
           # Verifying the repo exists
           gcloud artifacts repositories list --location=${{ env.GAR_LOCATION }}
 
-          IMAGE_NAME="${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
+          IMAGE_NAME="${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.SERVICE }}/${{ env.SERVICE }}:${{ github.sha }}"
           echo "::debug::Building and pushing image: ${IMAGE_NAME}"
           # or use this format:
           echo "Building and pushing image: ${IMAGE_NAME}" >&2
@@ -158,7 +152,8 @@ jobs:
         with:
           service: ${{ env.SERVICE }}
           region: ${{ env.REGION }}
-          image: "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
+          # hostname / project id / repository / image
+          image: "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.SERVICE }}/${{ env.SERVICE }}:${{ github.sha }}"
           env_vars: |
             SECRET_KEY_BASE=${{ secrets.SECRET_KEY_BASE }}
             DATABASE_URL=${{ secrets.DATABASE_URL }}
