--- a/.github/workflows/speech2text.yml
+++ b/.github/workflows/speech2text.yml
@@ -155,7 +155,7 @@ jobs:
           # hostname / project id / repository / image
           image: "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.SERVICE }}/${{ env.SERVICE }}:${{ github.sha }}"
           env_vars: |
-            SECRET_KEY_BASE=${{ secrets.SECRET_KEY_BASE }}
+            SECRET_KEY_BASE=xcTiCM6ApbGwjBU76LdRc+CIDQ3YNMu/5n4s4W5J9BNeR6oZBwi/YtGnQFwThGJQ
             DATABASE_URL=${{ secrets.DATABASE_URL }}
             PHX_HOST=${{ secrets.PHX_HOST }}
             GOOGLE_CLOUD_RUN=true
