--- a/cli/Dockerfile.dev
+++ b/cli/Dockerfile.dev
@@ -20,6 +20,11 @@ RUN apt-get update && apt-get install -y \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
+# Download and install Cloud SQL proxy directly
+RUN curl -o /usr/local/bin/cloud-sql-proxy \
+    https://storage.googleapis.com/cloud-sql-connectors/cloud-sql-proxy/v2.8.1/cloud-sql-proxy.linux.amd64 && \
+    chmod +x /usr/local/bin/cloud-sql-proxy
+
 WORKDIR /cli
 
 COPY . .
